tests/snapshots/guppy_export_tests__guppy_exports@test_assign_expr.json.snap
---
source: tests/guppy_export_tests.rs
expression: m.as_operation()
input_file: tests/guppy-exports/test_assign_expr.json
---
module {
  hugr.module {
    func @foo[](%arg0: !hugr.sum<tuple<>, tuple<>>) -> !hugr.sum<tuple<>, tuple<>> {
      %0 = cfg %arg0 : (!hugr.sum<tuple<>, tuple<>>) -> !hugr.sum<tuple<>, tuple<>> {
      ^bb0(%arg1: !hugr.sum<tuple<>, tuple<>>):
        %1 = make_tuple()
        %2 = tag 0 %1 : tuple<> -> <tuple<>>
        switch %2, %arg1 : !hugr.sum<tuple<>>, !hugr.sum<tuple<>, tuple<>> ^bb1
      ^bb1(%3: !hugr.sum<tuple<>, tuple<>>):  // pred: ^bb0
        output %3 : !hugr.sum<tuple<>, tuple<>>
      }
      output %0 : !hugr.sum<tuple<>, tuple<>>
    }
  }
}

